syntax = "proto3";

package kae.experimental.calculator;

option go_package = "golang/calculatorpb";
option java_outer_classname = "CalculatorServiceProtos";

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);
}

message SumRequest {
  repeated int32 addends = 1;
}

message SumResponse {
  int32 sum = 1;
}

